--- a/src/styles.css
+++ b/src/styles.css
@@ -91,3 +91,18 @@ a {
   margin-right: 2rem; */
 }
 
+/* Home page */
+.home-page {
+  background-color: var(--background-light);
+}
+.home-page div>img {
+  display: block;
+  width: 60%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.content {
+  padding: 0rem 2rem;
+  column-count: 2;
+}
+
