--- a/src/styles.css
+++ b/src/styles.css
@@ -106,3 +106,19 @@ a {
   column-count: 2;
 }
 
+/* Projects page */
+
+div>img {
+  display: block;
+  width: 46.1%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+
+/* Blog page */
+
+
+
+
