Add space between footer and content of pages. Add content for projects page.

--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid blog-page">
+<div class="container-fluid blog-page pb-4">
   <div class="container">
     <img class="img-fluid" alt="writing blog for coding" src="..\assets\images\coding_blog.svg">
   </div>
