--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,5 +1,15 @@
-<div class="container-fluid projects-page">
+<div class="container-fluid projects-page pb-4">
   <div class="container">
     <img class="img-fluid" alt="dev developing projects" src="..\assets\images\developer_projects.svg">
+  </div>
+  <div class="container pt-3">
+    <h3><i class="bi bi-bookmark-star"></i> Build a commercial website</h3>
+    <p>Url: <a href="https://www.ncecon.com/">https://www.ncecon.com/</a></p>
+    <p>This project was built to help my relative develop her own business in construction. I was in charged of designing and developing the website. The project is built based on Angular framework. Also use nodejs to build a simple api service using <a href="https://nodemailer.com/">Nodemailer</a> to send email confirmation when viewers try to contact the business via the website.</p>
+  </div>
+  <div class="container">
+    <h3><i class="bi bi-bookmark-star"></i> Developing my own web app about finance</h3>
+    <p>Url: <a href="#">In development process</a></p>
+    <p>I'm working on this project. There are two parts frontend and backend. Frontend uses Angular framework, html, css, bootstrap framework. Backend uses C#-.NET, EF Core database first, PostgreSQL, PgAdmin4.</p>
   </div>
 </div>
