--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid home-page">
+<div class="container-fluid home-page pb-4">
   <div class="container pt-3">
     <img class="img-fluid" alt="programmer introduction" src="..\assets\images\programmer.svg">
   </div>
