--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -8,5 +8,8 @@
     <h3><i class="bi bi-bookmark-star"></i> Developing my own web app about finance</h3>
     <p>Url: <a href="#">In development process</a></p>
     <p>I'm working on this project. There are two parts frontend and backend. Frontend uses Angular framework, html, css, bootstrap framework. Backend uses C#-.NET, EF Core database first, PostgreSQL, PgAdmin4.</p>
+    <h4>Backend</h4>
+    <p>Url: <a href="https://finmilyapp.azurewebsites.net/swagger/index.html">Api link</a></p>
+    <p>This is the api I created, but I haven't set up the database yet. So, calling api won't work at this time.</p>
   </div>
 </div>
