Using scss for styles. Add scss file for every components. Refactor styles to have global styles.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid p-0 navigation-container">
-  <div class="container d-flex navigation-bar">
+  <div class="container navigation-bar">
     <!-- logo part -->
     <div class="navigation-title">
       <a [routerLink]="['./']"
@@ -9,7 +9,7 @@
       </a>
     </div>
 
-    <div class="navigation d-flex">
+    <div class="navigation">
       <!-- navigation part -->
       <div class="navigation-items">
         <a [routerLink]="['./']"
