Add content homepage

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
   <div class="container py-3">
     <div class="content">
       <p>My name is Phuc Chau. I'm a student pursuing Computer Science at my thirties.  Coding for living is one of my objectives. The purpose of building this website is to advertise myself as well as to share some of my lessons learned during developing my own <a [routerLink]="['./projects']">projects</a>. I believe building my own projects is one of the most efficient ways to learning coding.</p>
-      <p>My primary tech stack is C# - .NET, PostgreSQL, EF Core, and Angular. I'm developing my skills to build backend specifically RESTful API service using .NET and to develop frontend using Angular framework.</p>
+      <p>My primary tech stack is C# - .NET, PostgreSQL, EF Core, and Angular. I'm developing my skills to build backend specifically RESTful API service using .NET and to develop frontend using Angular framework. Currently, I have a chance to study React framework via <a href="https://www.codepath.org/courses/web-development">CodePath Web Development 102</a>.</p>
       <p>Documenting and sharing what I am doing are also a crucial part to memorize what I have learned. My <a [routerLink]="['./blog']">blog</a> is a place to share my mistakes, or success developing those projects.</p>
       <p>In the mean time, you can find me via social media on <a href="https://www.linkedin.com/in/phucnchau/">LinkedIn</a>, and <a href="https://github.com/PhucNChau">GitHub</a>.</p>
     </div>
